# firm

./: .gitignore  Cargo.toml
firm_cli/: Cargo.toml
firm_cli/src/: cli.rs  main.rs
firm_cli/src/commands/: check.rs  lsp.rs  mod.rs
firm_lang/src/: lib.rs
firm_lang/src/diagnostics/: mod.rs  syntax.rs  workspace.rs
firm_lang/src/parser/dsl/: parsed_entity.rs  parsed_field.rs  parsed_schema.rs
firm_lang/src/workspace/: mod.rs
firm_lsp/: Cargo.toml
firm_lsp/src/: completion.rs  lib.rs  server.rs
