[package]
name = "firm-cli"
version = "0.5.0"
edition = "2024"
description = "Interact with Firm from the command line."
license = "AGPL-3.0"
repository = "https://github.com/42futures/firm"

[[bin]]
name = "firm"
path = "src/main.rs"

[dependencies]
firm_core = { path = "../firm_core" }
firm_lang = { path = "../firm_lang" }
firm_mcp = { path = "../firm_mcp" }
firm_lsp = { path = "../firm_lsp" }

tokio = { version = "1", features = ["rt-multi-thread"] }

clap = { version = "4.5.42", features = ["derive", "env"] }
console = "0.16.0"
indicatif = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
indicatif-log-bridge = "0.2.3"
inquire = { version = "0.7.5", default-features = false, features = [
    "console",
    "date",
] }
convert_case = "0.8.0"
chrono = "0.4.41"
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
iso_currency = { version = "0.5", features = ["with-serde", "iterator"] }
pathdiff = "0.2.3"
